# rossum-assignment

./: .env.example  .gitignore  README.md  payload_example.json  pyproject.toml
src/: __init__.py  rossum_hook.py
src/deploy/: __init__.py  deploy_with_sdk.py
src/lib/deploy/: __init__.py  deploy_with_sdk.py
src/lib/trigger/: __init__.py  config.yml  trigger_with_sdk.py
src/tests/: test_postbin.py  test_xml_format.py
src/trigger/: __init__.py
src/utils/: __init__.py  config.py  find_annotation.py  get_hook.py  login.py
